# interview

array/: CMakeLists.txt  README.md  main.cpp
array/inter_sec/: README.md  inter_sec.cmake  inter_sec.cpp  inter_sec.h
array/rem_dup/: README.md  rem_dup.cmake  rem_dup.cpp  rem_dup.h
array/rot_arr/: README.md  rot_arr.cmake  rot_arr.cpp  rot_arr.h
array/scripts/: class.sh
array/single_num/: README.md  single_num.cmake  single_num.cpp  single_num.h
array/time_sell_buy/: README.md  time_sell_buy.cmake  time_sell_buy.cpp  time_sell_buy.h
